--- a/AspNetCoreIdentityFido2Passwordless/appsettings.json
+++ b/AspNetCoreIdentityFido2Passwordless/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=AspNetCoreIdentityFido2Passwordless;Integrated Security=True;TrustServerCertificate=True"
+    "DefaultConnection1": "Server=(localdb)\\MSSQLLocalDB;Database=AspNetCoreIdentityFido2Passwordless;Integrated Security=True;TrustServerCertificate=True",
+    "DefaultConnection": "Server=tcp:fido2-server.database.windows.net,1433;Database=AspNetCoreIdentityFido2Passwordless;User ID=fido2-server-admin;Password=E2MdvQV98$411$ga;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Fido2": {
     "ServerDomain": "localhost",
