Responsivnes and minimized css, js

--- a/AspNetCoreIdentityFido2Passwordless/appsettings.json
+++ b/AspNetCoreIdentityFido2Passwordless/appsettings.json
@@ -1,12 +1,11 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection1": "Server=(localdb)\\MSSQLLocalDB;Database=AspNetCoreIdentityFido2Passwordless;Integrated Security=True;TrustServerCertificate=True",
     "DefaultConnection": "Server=tcp:fido2-server.database.windows.net,1433;Database=AspNetCoreIdentityFido2Passwordless;User ID=fido2-server-admin;Password=E2MdvQV98$411$ga;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Fido2": {
-    "ServerDomain": "localhost",
+    "ServerDomain": "fido2-d6gxdeh9d4ghahh4.eastus2-01.azurewebsites.net",
     "ServerName": "Fido2PasswordlessTest",
-    "Origins": [ "https://localhost:44326" ],
+    "Origins": [ "https://fido2-d6gxdeh9d4ghahh4.eastus2-01.azurewebsites.net" ],
     "TimestampDriftTolerance": 300000,
     "MDSAccessKey": null
   },
