--- a/AspNetCoreIdentityFido2Passwordless/appsettings.Development.json
+++ b/AspNetCoreIdentityFido2Passwordless/appsettings.Development.json
@@ -1,9 +1,21 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=AspNetCoreIdentityFido2Passwordless;Integrated Security=True;TrustServerCertificate=True",    
+  },
+  "Fido2": {
+    "ServerDomain": "localhost",
+    "ServerName": "Fido2PasswordlessTest",
+    "Origins": [ "https://localhost:44326" ],
+    "TimestampDriftTolerance": 300000,
+    "MDSAccessKey": null
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
       "System": "Information",
       "Microsoft": "Information"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
+
