--- a/AspNetCoreIdentityFido2Mfa/appsettings.json
+++ b/AspNetCoreIdentityFido2Mfa/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=AspNetCoreIdentityFido2Mfa;Integrated Security=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=AspNetCoreIdentityFido2Passwordless;Integrated Security=True;TrustServerCertificate=True"
   },
   "Fido2": {
     "ServerDomain": "localhost",
